--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ navigationUiKtx = "2.8.3"
 legacySupportV4 = "1.0.0"
 recyclerview = "1.4.0"
 annotation = "1.9.1"
+swipelayout = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +45,7 @@ androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation
 androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+swipelayout = { module = "com.github.zerobranch:SwipeLayout", version.ref = "swipelayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
