--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-<uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".data.utils.MyApplication"
         android:allowBackup="true"
@@ -15,20 +16,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CareCallApp"
         tools:targetApi="31">
+
         <activity
-            android:name=".ui.auth.login.LoginActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.hospital.HospitalActivity"
-            android:exported="false"
-            android:theme="@style/Theme.CareCallApp.NoActionBar" />
-    </application>
+     </application>
 
 </manifest>
